--- a/assets/src/scss/component/listings/_listing-category.scss
+++ b/assets/src/scss/component/listings/_listing-category.scss
@@ -28,7 +28,7 @@
             &:after{
                 content: "";
                 left: 40px;
-                bottom: -12px;
+                bottom: -11px;
                 border: 6px solid transparent;
                 border-top-color: var(--directorist-color-white);
                 display: inline-block;
